add cucumber support

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "argparse": "^2.0.1"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^8.0.0-rc.1",
     "jest": "^27.4.5"
   },
   "scripts": {
     "build": "echo; echo Hello World; echo",
+	"scenario": "npx cucumber-js -c ./.cucumber.js",
     "test": "npx jest"
   },
   "main": "index.js"
