swap workflow jobs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,42 +90,42 @@ jobs:
         path: acceptance.log
 
 
-  capacity:
+  #capacity:
 
-    needs: integration
+  #  needs: integration
 
-    runs-on: ubuntu-latest
+  #  runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [ 12.x, 14.x, 16.x ]
+  #  strategy:
+  #    matrix:
+  #      node-version: [ 12.x, 14.x, 16.x ]
 
-    steps:
+  #  steps:
 
-    - name: Download artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: integration
+  #  - name: Download artifacts
+  #    uses: actions/download-artifact@v2
+  #    with:
+  #      name: integration
 
-    - name: Unpack tarball
-      run: |
-        tar -xf integration-${{ matrix.node-version }}-${{ github.sha }}.tar
-        cat version
+  #  - name: Unpack tarball
+  #    run: |
+  #      tar -xf integration-${{ matrix.node-version }}-${{ github.sha }}.tar
+  #      cat version
 
-    - name: Use node ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+  #  - name: Use node ${{ matrix.node-version }}
+  #    uses: actions/setup-node@v2
+  #    with:
+  #      node-version: ${{ matrix.node-version }}
+  #      cache: 'npm'
 
-    - name: Run capacity scenarios
-    - run: npm run capacity --if-present | tee capacity.log
+  #  - name: Run capacity scenarios
+  #  - run: npm run capacity --if-present | tee capacity.log
 
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: capacity-${{ matrix.node-version }}-${{ github.sha }}
-        path: capacity.log
+  #  - name: Upload artifacts
+  #    uses: actions/upload-artifact@v2
+  #    with:
+  #      name: capacity-${{ matrix.node-version }}-${{ github.sha }}
+  #      path: capacity.log
 
 
   #deployment:
@@ -147,23 +147,23 @@ jobs:
   #      cache: 'npm'
 
 
-  #release:
+  release:
 
-  #  needs: deployment
+    needs: deployment
 
-  #  runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-  #  concurrency:
-  #    group: ${{ github.head_ref }}
-  #    cancel-in-progress: true
+    concurrency:
+      group: ${{ github.head_ref }}
+      cancel-in-progress: true
 
-  #  steps:
+    steps:
 
-  #  - name: Download artifacts
-  #    uses: actions/download-artifact@v2
+    - name: Download artifacts
+      uses: actions/download-artifact@v2
 
-  #  - name: Debug logging
-  #    run: 'ls -l *'
+    - name: Debug logging
+      run: 'ls -l *'
 
 
   #issue:
