--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,13 +33,13 @@ jobs:
         cache: 'npm'
 
     - name: Clone dependencies
-      run: npm ci | tee integration.log
+      run: npm ci
 
     - name: Build artifacts
-      run: npm run build --if-present | tee -a integration.log
+      run: npm run build --if-present
 
     - name: Run unit tests
-      run: npm test | tee -a integration.log
+      run: npm test
 
     - name: Create tarball
       run: |
@@ -81,7 +81,7 @@ jobs:
         cache: 'npm'
 
     - name: Run acceptance scenarios
-      run: npm run scenario | tee acceptance.log
+      run: npm run scenario
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
@@ -119,7 +119,7 @@ jobs:
   #      cache: 'npm'
 
   #  - name: Run capacity scenarios
-  #  - run: npm run capacity --if-present | tee capacity.log
+  #  - run: npm run capacity --if-present
 
   #  - name: Upload artifacts
   #    uses: actions/upload-artifact@v2
@@ -135,9 +135,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    concurrency:
-      group: ${{ github.head_ref }}
-      cancel-in-progress: true
+    #concurrency:
+    #  group: ${{ github.head_ref }}
+    #  cancel-in-progress: true
 
     steps:
 
