more workflow debug logging

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Unpack tarball
       run: |
         tar -xf integration-${{ matrix.node-version }}-${{ github.sha }}.tar
-        ls -la . node_modules/.bin
+        tree node_modules
 
     - name: Use node ${{ matrix.node-version }}
       uses: actions/setup-node@v2
