--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: CI-CD
 
 env:
   COMMIT: ${{ github.sha }}
-  NODE_ENV: 'production'
+  NODE_ENV: production
+  NODE_VERSION: 14.x
 
 on:
   push:
@@ -17,19 +18,15 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [ 12.x, 14.x, 16.x ]
-
     steps:
 
     - name: Checkout code updates
       uses: actions/checkout@v2
 
-    - name: Use node ${{ matrix.node-version }}
+    - name: Use node ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
 
     - name: Clone dependencies
@@ -47,13 +44,13 @@ jobs:
       run: |
         echo ${{ github.sha }} > version
         rm -rf .git .github .gitignore
-        tar -cvf build-${{ matrix.node-version }}-${{ github.sha }}.tar .
+        tar -cvf build-${{ env.NODE_VERSION }}-${{ github.sha }}.tar .
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
         name: builds
-        path: build-${{ matrix.node-version }}-${{ github.sha }}.tar
+        path: build-${{ env.NODE_VERSION }}-${{ github.sha }}.tar
 
 
   acceptance:
@@ -61,10 +58,6 @@ jobs:
     needs: integration
 
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [ 12.x, 14.x, 16.x ]
 
     steps:
 
@@ -74,12 +67,12 @@ jobs:
         name: builds
 
     - name: Unpack tarball
-      run: tar -xf build-${{ matrix.node-version }}-${{ github.sha }}.tar
+      run: tar -xf build-${{ env.NODE_VERSION }}-${{ github.sha }}.tar
 
-    - name: Use node ${{ matrix.node-version }}
+    - name: Use node ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
 
     - name: Run acceptance scenarios
@@ -88,7 +81,7 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: acceptance-${{ matrix.node-version }}-${{ github.sha }}
+        name: acceptance-${{ env.NODE_VERSION }}-${{ github.sha }}
         path: acceptance.log
 
 
@@ -97,10 +90,6 @@ jobs:
     needs: integration
 
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [ 12.x, 14.x, 16.x ]
 
     steps:
 
@@ -111,13 +100,13 @@ jobs:
 
     - name: Unpack tarball
       run: |
-        tar -xf build-${{ matrix.node-version }}-${{ github.sha }}.tar
+        tar -xf build-${{ env.NODE_VERSION }}-${{ github.sha }}.tar
         cat version
 
-    - name: Use node ${{ matrix.node-version }}
+    - name: Use node ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
 
     - name: Run capacity scenarios
@@ -126,7 +115,7 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: capacity-${{ matrix.node-version }}-${{ github.sha }}
+        name: capacity-${{ env.NODE_VERSION }}-${{ github.sha }}
         path: capacity.log
 
 
@@ -138,13 +127,6 @@ jobs:
 
     environment: acceptance
 
-    #concurrency:
-    #  group: acceptance
-    #  cancel-in-progress: true
-
-    env:
-      NODE_ENV: 'integration'
-
     steps:
 
     - name: Download artifacts
@@ -153,12 +135,12 @@ jobs:
         name: builds
 
     - name: Unpack tarball
-      run: tar -xf build-14.x-${{ github.sha }}.tar
+      run: tar -xf build-${{ env.NODE_VERSION }}-${{ github.sha }}.tar
 
-    - name: Use node 14.x
+    - name: Use node ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
 
 
@@ -170,10 +152,6 @@ jobs:
 
     environment: production
 
-    #concurrency:
-    #  group: acceptance
-    #  cancel-in-progress: true
-
     steps:
 
     - name: Download artifacts
@@ -181,45 +159,4 @@ jobs:
 
     - name: Debug logging
       run: tree .
-
-
-  #issue:
-
-  #  runs-on: ubuntu-latest 
-
-  #  permissions:
-  #    issues: write 
-
-  #  steps:
-
-  #  - name: Create issue via REST API
-  #    run: |
-  #      curl --request POST \
-  #      --url https://api.github.com/repos/${{ github.repository }}/issues \
-  #      --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-  #      --header 'content-type: application/json' \
-  #      --data '{
-  #        "title": "Automated issue for commit: ${{ github.sha }}",
-  #        "body": "pipeline workflow: **${{ github.workflow }}** \n\n code commit hash: _${{ github.sha }}_."
-  #        }' \
-  #      --fail
-
-#
-#permissions:
-#  actions: read|write|none
-#  checks: read|write|none
-#  contents: read|write|none
-#  deployments: read|write|none
-#  id-token: read|write|none
-#  issues: read|write|none
-#  discussions: read|write|none
-#  packages: read|write|none
-#  pages: read|write|none
-#  pull-requests: read|write|none
-#  repository-projects: read|write|none
-#  security-events: read|write|none
-#  statuses: read|write|none
-#
-# When specifying some, all of those that are not specified are set to none.
-#
 
