--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -4,7 +4,7 @@ name: AWS-SDK
 on:
 
   push:
-    branches: [ s3 ]
+    branches: [ main ]
 
   workflow_dispatch:
 
@@ -15,7 +15,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    environment: acceptance
+    environment: storage
 
     permissions:
       id-token: write
@@ -32,8 +32,8 @@ jobs:
           aws-region: us-west-2
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-external-id: ${{ secrets.AWS_ROLE_EXTERNAL_ID }}
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          #role-external-id: ${{ secrets.AWS_ROLE_EXTERNAL_ID }}
+          #role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           #mask-aws-account-id: true
           #role-duration-seconds: 300
           #role-session-name: GitHubActions
