--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,31 +17,30 @@ jobs:
 
     environment: storage
 
-    permissions:
-      id-token: write
-      contents: read
+    #permissions:
+    #  id-token: write
+    #  contents: read
 
     steps:
 
-      #- name: Checkout Code
-      #  uses: actions/checkout@v2
+    #- name: Checkout Code
+    #  uses: actions/checkout@v2
 
-      - name: Configure Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: us-west-2
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          #role-external-id: ${{ secrets.AWS_ROLE_EXTERNAL_ID }}
-          #role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          #mask-aws-account-id: true
-          #role-duration-seconds: 300
-          #role-session-name: GitHubActions
-          #role-skip-session-tagging: true
+    - name: Configure Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-region: us-west-2
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #role-external-id: ${{ secrets.AWS_ROLE_EXTERNAL_ID }}
+        #role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+        #mask-aws-account-id: true
+        #role-duration-seconds: 300
+        #role-session-name: GitHubActions
+        #role-skip-session-tagging: true
 
-      - name: Run a multi-line script
-        run: |
-          aws s3 ls
-          
-          
-          
+    - name: Run a multi-line script
+      run: |
+        aws s3 ls gurumojo net-gurumojo-ci --recursive
+
+
