--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -41,6 +41,6 @@ jobs:
 
     - name: Run a multi-line script
       run: |
-        aws s3 ls gurumojo net-gurumojo-ci --recursive
-
+        now=$(date -Iseconds)
+        aws s3 sync . s3://net-gurumojo-ci/$now
 
